# reactor_pattern

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
src/: CMakeLists.txt  EventHandler.h  EventType.h  IInitiationDispatcher.h  InitiationDispatcher.cpp  InitiationDispatcher.h  LoggingAcceptor.cpp  LoggingAcceptor.h  LoggingHandler.cpp  LoggingHandler.h  SyncEventDexer.h  hutiliy.h  main.cpp
test/: CMakeLists.txt  initiation_dispatcher_test.cpp  logging_acceptor_test.cpp  logging_handler_test.cpp  mock_initiation_dispatcher.h  unit_test.cpp
